--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://liubov1211.github.io/react-hooks",
+  "homepage": "https://liubov1211.github.io/react-hooks/",
   "name": "react-hooks",
   "version": "0.1.0",
   "private": true,
